--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC"
 	rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="Aufgabe0.js"></script>
+<script src="Aufgabe0.ts"></script>
 </head>
 
 
