Ändern Link mit meinen Daten

--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -15,11 +15,13 @@
 
 <script src="//htmlpreview.github.io/htmlpreview.min.js"></script>
 <script>HTMLPreview.replaceAssets();</script>
-<script src="//query.yahooapis.com/v1/public/yql?q=use%20%22https%3A%2F%2Fraw.githubusercontent.com%2Fyql%2Fyql-tables%2Fmaster%2Fdata%2Fdata.headers.xml%22%20as%20headers%3B%20select%20*%20from%20headers%20where%20url%3D%22https%3A%2F%2Fraw.githubusercontent.com%2FKevinBlumtritt%2FProject-01%2Fmaster%2FProject01%2FProject01.js%22&amp;format=json&amp;diagnostics=true&amp;callback=HTMLPreview.loadJS"></script><script>function Funktion() {
-    var person = prompt("Bitte gib deinen Namen ein");
-    if (person != null) {
-        document.getElementById("demo").innerHTML =
-            "Hallöle " + person + "!" "Schön dass du vorbei schaust :)";
+<script src="//query.yahooapis.com/v1/public/yql?q=use%20%22https%3A%2F%2Fraw.githubusercontent.com%2Fyql%2Fyql-tables%2Fmaster%2Fdata%2Fdata.headers.xml%22%20as%20headers%3B%20select%20*%20from%20headers%20where%20url%3D%22https%3A%2F%2Fraw.githubusercontent.com%2FAleaFlesch%2FEIA2%2Fmaster%2FAufgabe0%2FAufgabe0.js%22&amp;format=json&amp;diagnostics=true&amp;callback=HTMLPreview.loadJS"></script>
+<script>
+	function Funktion() {
+	    var person = prompt("Bitte gib deinen Namen ein");
+	    if (person != null) {
+		document.getElementById("demo").innerHTML =
+		    "Hallöle " + person + "!" "Schön dass du vorbei schaust :)";
     }
 }
 //# sourceMappingURL=Aufgabe01.js.map</script>
