--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -2,29 +2,14 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">	
-<base href="https://raw.githubusercontent.com/AleaFlesch/EIA2/blob/master/Aufgabe0/Aufgabe0.html">
 <meta charset="ISO-8859-1">
 <title>Aufgabe 0</title>
-<script type="text/htmlpreview" src="Aufgabe01.js"></script>
+<script src="Aufgabe0.js"></script>
 </head>	
 	
 <body>
-	Hallo!
-	<button onclick="Funktion()">Hier draufklicken</button>
-	<p id="demo"></p>
-
-<script src="//htmlpreview.github.io/htmlpreview.min.js"></script>
-<script>HTMLPreview.replaceAssets();</script>
-<script src="//query.yahooapis.com/v1/public/yql?q=use%20%22https%3A%2F%2Fraw.githubusercontent.com%2Fyql%2Fyql-tables%2Fmaster%2Fdata%2Fdata.headers.xml%22%20as%20headers%3B%20select%20*%20from%20headers%20where%20url%3D%22https%3A%2F%2Fraw.githubusercontent.com%2FAleaFlesch%2FEIA2%2Fmaster%2FAufgabe0%2FAufgabe0.js%22&amp;format=json&amp;diagnostics=true&amp;callback=HTMLPreview.loadJS"></script>
-<script>
-	function Funktion() {
-	    var person = prompt("Bitte gib deinen Namen ein");
-	    if (person != null) {
-		document.getElementById("demo").innerHTML =
-		    "Hallöle " + person + "!" "Schön dass du vorbei schaust :)";
-    }
-}
-//# sourceMappingURL=Aufgabe01.js.map</script>
+	<button onclick="Funktion()">Einmal klicken bitte...</button>
+	<p id="solution"></p>
 </body>
 
 </html>
