--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -8,6 +8,7 @@
 </head>	
 	
 <body>
+	<p>Hallo du!</p>
 	<button onclick="Funktion()">Einmal klicken bitte...</button>
 	<p id="solution"></p>
 </body>
