--- a/Aufgabe0/Aufgabe0.html
+++ b/Aufgabe0/Aufgabe0.html
@@ -11,6 +11,6 @@
 	Hallöle!
 	<button onclick="Funktion()">Einmal klicken bitte...</button>
 	<p id="solution"></p>
-	<a href="https://AleaFlesch.github.io/EIA2/Aufgabe0/Aufgabe0.ts" target="_blank">JS Datei</a>
+	<a href="Aufgabe0.js" target="_blank">JS Datei</a>
 </body>
 </html>
