Aufgabe2 neuer Ansatz

--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Aufgabe2</title>
+</head>
 <body>
-	<script src="Boxes.js"></script>
+<script src="Aufgabe2.js"></script>
 </body>
 </html>
