--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Aufgabe2</title>
+<script src="Aufgabe2.js"></script>
+<link rel="stylesheet" type="text/css" href="Aufgabe2.css">
 </head>
 <body>
-<script src="Aufgabe2.js"></script>
-<script src="Aufgabe2.css"></script>
+	<div id="spieltisch"></div>
 </body>
 </html>
