--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -7,6 +7,14 @@
 <link rel="stylesheet" type="text/css" href="Aufgabe2.css">
 </head>
 <body>
-	<div id="spieltisch"></div>
+<div id="Nachziehstapel"> Nachziehstapel
+</div>
+
+<div id="Ablagestapel"> Ablagestapel 
+</div>
+
+<div id="Handkarten">
+	<span class="handBox"></span>
+ </div>
 </body>
 </html>
