--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -7,14 +7,12 @@
 <link rel="stylesheet" type="text/css" href="Aufgabe2.css">
 </head>
 <body>
-<div id="Nachziehstapel"> Nachziehstapel
-</div>
+	<div id="Nachziehstapel">Nachziehstapel</div>
 
-<div id="Ablagestapel"> Ablagestapel 
-</div>
+	<div id="Ablagestapel">Ablagestapel</div>
 
-<div id="Handkarten">
-	<span class="newBox"></span>
- </div>
+	<div id="Handkarten">
+		<span class="newBox"></span>
+	</div>
 </body>
 </html>
