--- a/Endabgabe/Abschlussaufgabe.html
+++ b/Endabgabe/Abschlussaufgabe.html
@@ -10,7 +10,7 @@
 	<script src="Moveable.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Snow.js" type="text/javascript" charset="utf-8"></script>
 	<script src="snowball.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Main2.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Trees.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Snowman.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Birdhouse.js" type="text/javascript" charset="utf-8"></script>
